--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Broadway Design</title>
-  <link href="./resources/style.css" type="text/css" rel="stylesheet">
+  <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
@@ -22,7 +22,7 @@
 <!--Our Process-->
 
   <h2>Our Process</h2>
-    <img src="resources/icons/identift.svg">
+    <img src="resources/icons/identify.svg">
     <h3>Identify</h3>
       <p>We focus on the most important details.</p>
     <img src="resources/icons/understand.svg">
@@ -36,20 +36,21 @@
 
   <div class=header>
     Designed in New York
-  <div>
+  </div>
 
     <h3>Portfolio</h3>
       <p>Coming Soon</p>
     <h3>Team</h3>
       <p>We're Hiring!</p>
     <h3>Contact</h3>
-      <p>Phone: (555) 555-5555<br />E-mail: test@example.com<br />Twitter: @test</p>
+      <p>Phone: (555) 555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>>Twitter: @test</p>
 
 <!--Footer-->
 
 <div class="footer">
-  <p>&copy; Broadway 2017</p>
-  <p>Home About Work Team Contact</p>
+  <p>&copy; Broadway 2017 Home About Work Team Contact</p>
 </div>
 
 </body>
