--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 
 <div class="header">
   <h1>Broadway Design</h1>
-  <ul>
-    <li>Home</li>
-    <li>Process</li>
-    <li>Work</li>
-    <li>Team</li>
-    <li>Contact</li>
-  </ul>
+    <p><a href="home">Home</a></p>
+    <p><a href="process">Process</a></p>
+    <p><a href="work">Work</a></p>
+    <p><a href="team">Team</a></p>
+    <p><a href="contact">Contact</a></p>
 </div>
 
 <!--Our Process-->
@@ -45,12 +43,17 @@
     <h3>Contact</h3>
       <p>Phone: (555) 555-5555</p>
       <p>E-mail: test@example.com</p>
-      <p>>Twitter: @test</p>
+      <p>Twitter: @test</p>
 
 <!--Footer-->
 
 <div class="footer">
-  <p>&copy; Broadway 2017 Home About Work Team Contact</p>
+  <h5>&copy; Broadway 2017</h5>
+  <p><a href="home">Home</a></p>
+  <p><a href="process">Process</a></p>
+  <p><a href="work">Work</a></p>
+  <p><a href="team">Team</a></p>
+  <p><a href="contact">Contact</a></p>
 </div>
 
 </body>
