--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 
 <div class="header">
   <h1>Broadway Design</h1>
-    <p><a href="home">Home</a></p>
-    <p><a href="process">Process</a></p>
-    <p><a href="work">Work</a></p>
-    <p><a href="team">Team</a></p>
-    <p><a href="contact">Contact</a></p>
+
+    <p><a class="btn-nav" href="#">Home</a></p>
+    <p><a class="btn-nav" href="process">Process</a></p>
+    <p><a class="btn-nav" href="work">Work</a></p>
+    <p><a class="btn-nav" href="team">Team</a></p>
+    <p><a class="btn-nav" href="contact">Contact</a></p>
 </div>
 
 <!--Our Process-->
@@ -30,11 +31,13 @@
     <h3>Execute</h3>
       <p>We put everything we have into our work.</p>
 
-<!--Designed in New York-->
+<!--mini Header-->
 
   <div class=header>
-    Designed in New York
+    <h3>Designed in New York</h3>
   </div>
+
+<!--About-->
 
     <h3>Portfolio</h3>
       <p>Coming Soon</p>
@@ -49,11 +52,11 @@
 
 <div class="footer">
   <h5>&copy; Broadway 2017</h5>
-  <p><a href="home">Home</a></p>
-  <p><a href="process">Process</a></p>
-  <p><a href="work">Work</a></p>
-  <p><a href="team">Team</a></p>
-  <p><a href="contact">Contact</a></p>
+  <p><a class="btn-nav" href="home">Home</a></p>
+  <p><a class="btn-nav" href="process">Process</a></p>
+  <p><a class="btn-nav" href="work">Work</a></p>
+  <p><a class="btn-nav" href="team">Team</a></p>
+  <p><a class="btn-nav" href="contact">Contact</a></p>
 </div>
 
 </body>
