--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
 <!--Footer-->
 
 <div class="footer">
-  <h5>&copy; Broadway 2017</h5>
-  <p><a class="btn-nav" href="home">Home</a></p>
-  <p><a class="btn-nav" href="process">Process</a></p>
-  <p><a class="btn-nav" href="work">Work</a></p>
-  <p><a class="btn-nav" href="team">Team</a></p>
-  <p><a class="btn-nav" href="contact">Contact</a></p>
+  <p>
+    &copy; Broadway 2017
+      <a class="btn-nav" href="home">Home</a>
+      <a class="btn-nav" href="process">Process</a>
+      <a class="btn-nav" href="work">Work</a>
+      <a class="btn-nav" href="team">Team</a>
+      <a class="btn-nav" href="contact">Contact</a>
 </div>
 
 </body>
